--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ button:disabled{
 </div>
 
 <script>
-const SCRIPT_URL = "PASTE_YOUR_WEB_APP_URL_HERE";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwnO3TwPQ0icrc7MPSO5vzD2gvny02SPDVZPDiJn1uEYdQzhoEekkNYHcgzqc2bs7_dLA/exec";
 
 let CURRENT_ROLL = "";
 let CURRENT_DOB  = "";
