--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 
 <style>
 body{
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+  font-family:"Segoe UI",Arial,sans-serif;
+  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
   margin:0;
   height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
 }
-
 .card{
   background:#fff;
   width:100%;
@@ -23,243 +22,140 @@ body{
   padding:30px;
   border-radius:14px;
   box-shadow:0 20px 45px rgba(0,0,0,.25);
-  animation:fade .5s ease;
 }
-
-@keyframes fade{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
-}
-
-h1{
-  text-align:center;
-  font-size:20px;
-  color:#203a43;
-  margin-bottom:6px;
-}
-
-h2{
-  text-align:center;
-  font-size:15px;
-  color:#555;
-  margin-bottom:20px;
-}
-
-label{
-  font-weight:600;
-  margin-top:14px;
-  display:block;
-}
-
+h1{text-align:center;font-size:20px;color:#203a43;}
+h2{text-align:center;font-size:15px;color:#555;margin-bottom:20px;}
+label{font-weight:600;margin-top:14px;display:block;}
 input{
-  width:100%;
-  padding:10px;
-  margin-top:6px;
-  border-radius:6px;
-  border:1px solid #ccc;
-  font-size:15px;
+  width:100%;padding:10px;margin-top:6px;
+  border-radius:6px;border:1px solid #ccc;
 }
-
 button{
-  width:100%;
-  margin-top:24px;
-  padding:12px;
-  border:none;
-  border-radius:30px;
+  width:100%;margin-top:24px;padding:12px;
+  border:none;border-radius:30px;
   background:linear-gradient(135deg,#2c5364,#203a43);
-  color:#fff;
-  font-size:16px;
-  font-weight:600;
+  color:#fff;font-size:16px;font-weight:600;
   cursor:pointer;
 }
-
-button:disabled{
-  background:#999;
-  cursor:not-allowed;
-}
-
-.msg{
-  margin-top:16px;
-  text-align:center;
-  font-weight:600;
-  min-height:20px;
-}
-
-.register-link{
-  text-align:center;
-  margin-top:12px;
-  font-size:13px;
-}
-
-.register-link a{
-  color:#2c5364;
-  text-decoration:none;
-  font-weight:600;
-}
-
-.register-link a:hover{
-  text-decoration:underline;
-}
-
-/* Wheel */
-#wheelBox{
-  display:none;
-  text-align:center;
-}
-
+button:disabled{background:#999;cursor:not-allowed;}
+.msg{margin-top:16px;text-align:center;font-weight:600;}
+.register-link{text-align:center;margin-top:12px;font-size:13px;}
+.register-link a{color:#2c5364;text-decoration:none;font-weight:600;}
+.register-link a:hover{text-decoration:underline;}
+#wheelBox{display:none;text-align:center;}
 .wheel{
-  margin:30px auto;
-  width:160px;
-  height:160px;
-  border-radius:50%;
-  border:10px solid #2c5364;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:18px;
-  font-weight:700;
-  color:#2c5364;
-  animation:none;
+  margin:30px auto;width:160px;height:160px;
+  border-radius:50%;border:10px solid #2c5364;
+  display:flex;justify-content:center;align-items:center;
+  font-size:18px;font-weight:700;color:#2c5364;
 }
-
-.spin{
-  animation:spin 2s ease-out;
-}
-
-@keyframes spin{
-  from{transform:rotate(0deg)}
-  to{transform:rotate(720deg)}
-}
-
-.result{
-  margin-top:20px;
-  text-align:left;
-}
-
-.result strong{
-  color:#203a43;
-}
+.spin{animation:spin 2s ease-out;}
+@keyframes spin{from{transform:rotate(0)}to{transform:rotate(720deg)}}
+.result{text-align:left;margin-top:20px;}
 </style>
 </head>
 
 <body>
-
 <div class="card">
 
-  <!-- LOGIN -->
-  <div id="loginBox">
-    <h1>Project Allocation</h1>
-    <h2>Group Discussion & Seminar (ME3273)</h2>
+<div id="loginBox">
+  <h1>Project Allocation</h1>
+  <h2>Group Discussion & Seminar (ME3273)</h2>
 
-    <label>Roll Number</label>
-    <input id="roll">
+  <label>Roll Number</label>
+  <input id="roll">
 
-    <label>Date of Birth</label>
-    <input id="dob" type="date">
+  <label>Date of Birth</label>
+  <input id="dob" type="date">
 
-    <button onclick="login()">Login</button>
+  <button onclick="login()">Login</button>
+  <div class="msg" id="msg"></div>
 
-    <div class="msg" id="msg"></div>
-
-    <div class="register-link">
-      Not registered?
-      <a href="https://rajeshakula-iiest.github.io/Reg/" target="_blank">
-        Click here to register
-      </a>
-    </div>
+  <div class="register-link">
+    Not registered?
+    <a href="https://me3273dy2026.github.io/Reg/" target="_blank">
+      Click here to register
+    </a>
   </div>
+</div>
 
-  <!-- WHEEL -->
-  <div id="wheelBox">
-    <h1>Spin the Wheel</h1>
-
-    <div class="wheel" id="wheel">SPIN</div>
-
-    <button id="spinBtn" onclick="spin()">Spin Now</button>
-
-    <div class="result" id="result"></div>
-  </div>
+<div id="wheelBox">
+  <h1>Spin the Wheel</h1>
+  <div class="wheel" id="wheel">SPIN</div>
+  <button id="spinBtn" onclick="spin()">Spin Now</button>
+  <div class="result" id="result"></div>
+</div>
 
 </div>
 
 <script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwnO3TwPQ0icrc7MPSO5vzD2gvny02SPDVZPDiJn1uEYdQzhoEekkNYHcgzqc2bs7_dLA/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxo-7FAsd-9UNxOamPLg4fruN6Ss6qmzvfbOMRErSPRGQLD3QVxlCsQMzAF4B1dDQ1JCQ/exec";
 
-let CURRENT_ROLL = "";
-let CURRENT_DOB  = "";
+let ROLL="", DOB="";
 
 function login(){
-  const roll = document.getElementById("roll").value.trim().toUpperCase();
-  const dob  = document.getElementById("dob").value;
-  const msg  = document.getElementById("msg");
+  ROLL=document.getElementById("roll").value.trim().toUpperCase();
+  DOB=document.getElementById("dob").value;
+  const msg=document.getElementById("msg");
 
-  if(!roll || !dob){
+  if(!ROLL||!DOB){
     msg.style.color="red";
     msg.innerText="Enter Roll Number and DOB";
     return;
   }
 
-  CURRENT_ROLL = roll;
-  CURRENT_DOB  = dob;
-
-  const fd = new URLSearchParams();
+  const fd=new URLSearchParams();
   fd.append("action","login");
-  fd.append("roll",roll);
-  fd.append("dob",dob);
+  fd.append("roll",ROLL);
+  fd.append("dob",DOB);
 
   fetch(SCRIPT_URL,{method:"POST",body:fd})
   .then(r=>r.json())
   .then(res=>{
     if(res.status==="NOT_REGISTERED"){
       msg.style.color="red";
-      msg.innerText="You are not registered";
+      msg.innerText="You are not registered. Please register first.";
       return;
     }
-
     if(res.status==="ELIGIBLE"){
-      document.getElementById("loginBox").style.display="none";
-      document.getElementById("wheelBox").style.display="block";
-      return;
+      loginBox.style.display="none";
+      wheelBox.style.display="block";
     }
-
     if(res.status==="ALREADY_ASSIGNED"){
-      showResult(res.projectID,res.teammates,true);
+      showResult(res.projectID,res.teammates);
     }
   });
 }
 
 function spin(){
-  document.getElementById("spinBtn").disabled=true;
-  const wheel=document.getElementById("wheel");
+  spinBtn.disabled=true;
   wheel.classList.add("spin");
 
   const fd=new URLSearchParams();
   fd.append("action","spin");
-  fd.append("roll",CURRENT_ROLL);
-  fd.append("dob",CURRENT_DOB);
+  fd.append("roll",ROLL);
+  fd.append("dob",DOB);
 
   setTimeout(()=>{
     fetch(SCRIPT_URL,{method:"POST",body:fd})
     .then(r=>r.json())
     .then(res=>{
-      showResult(res.project,res.teammates,false);
+      showResult(res.project,res.teammates);
     });
   },2000);
 }
 
-function showResult(project,team,locked){
-  document.getElementById("loginBox").style.display="none";
-  document.getElementById("wheelBox").style.display="block";
-  document.getElementById("spinBtn").disabled=true;
+function showResult(project,team){
+  loginBox.style.display="none";
+  wheelBox.style.display="block";
+  spinBtn.disabled=true;
 
-  let html=`<strong>Assigned Project:</strong> ${project}<br><br>
-            <strong>Students in this project:</strong><br>`;
-
+  let html=`<b>Assigned Project:</b> ${project}<br><br>
+            <b>Students in this project:</b><br>`;
   team.forEach((s,i)=>{
     html+=`${i+1}. ${s.name} (${s.roll})<br>`;
   });
-
-  document.getElementById("result").innerHTML=html;
+  result.innerHTML=html;
 }
 </script>
 
