--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ button{
 </div>
 
 <script>
-const SCRIPT_URL = "PASTE_REDEPLOYED_WEB_APP_URL";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzgaaO7vXBIf5T0l0V8qXxXJZi25AgDFGPPrmBgZ3LTcybJqCm7BlwMIXJmvM4nL3EAeA/exec";
 
 let ROLL="", DOB="";
 
