--- a/index.html
+++ b/index.html
@@ -1,138 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Project Allocation Login | ME3273</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body{
-  font-family:"Segoe UI",Arial,sans-serif;
-  background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-  margin:0;height:100vh;
-  display:flex;justify-content:center;align-items:center;
-}
-.card{
-  background:#fff;padding:30px;
-  width:100%;max-width:420px;
-  border-radius:14px;
-  box-shadow:0 15px 40px rgba(0,0,0,.25);
-}
-h1{text-align:center;color:#203a43;font-size:20px;}
-h2{text-align:center;color:#555;font-size:14px;margin-bottom:20px;}
-label{font-weight:600;margin-top:14px;display:block;}
-input{
-  width:100%;padding:10px;margin-top:6px;
-  border-radius:6px;border:1px solid #ccc;
-}
-button{
-  width:100%;margin-top:22px;padding:12px;
-  border:none;border-radius:30px;
-  background:linear-gradient(135deg,#2c5364,#203a43);
-  color:#fff;font-size:16px;font-weight:600;
-  cursor:pointer;
-}
-.msg{text-align:center;margin-top:16px;font-weight:600;}
-.register-link{text-align:center;margin-top:12px;font-size:13px;}
-.register-link a{color:#2c5364;text-decoration:none;font-weight:600;}
-</style>
+  <meta charset="UTF-8">
+  <title>Redirecting…</title>
+  <meta http-equiv="refresh" content="0; url=login.html">
 </head>
-
 <body>
-
-<div class="card" id="loginBox">
-  <h1>Project Allocation</h1>
-  <h2>Group Discussion & Seminar (ME3273)</h2>
-
-  <label>Roll Number</label>
-  <input id="roll">
-
-  <label>Date of Birth</label>
-  <input type="date" id="dob">
-
-  <button onclick="login()">Login</button>
-
-  <div class="msg" id="msg"></div>
-
-  <div class="register-link">
-    Not registered?
-    <a href="https://me3273dy2026.github.io/Reg/" target="_blank">
-      Click here to register
-    </a>
-  </div>
-</div>
-
-<div class="card" id="wheelBox" style="display:none;text-align:center">
-  <h1>Spin the Wheel</h1>
-  <button id="spinBtn" onclick="spin()">SPIN</button>
-  <div class="msg" id="result"></div>
-</div>
-
-<script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwJf8XJgwZl8wKHShTISy3rmRpzYOplSkb1XIUrBUEtolJmyDs3jXXk4CO96LI75FEmZg/exec";
-
-let ROLL="", DOB="";
-
-function login(){
-  const msg=document.getElementById("msg");
-  ROLL=document.getElementById("roll").value.trim().toUpperCase();
-  DOB=document.getElementById("dob").value;
-
-  if(!ROLL||!DOB){
-    msg.style.color="red";
-    msg.innerText="Enter Roll Number and DOB";
-    return;
-  }
-
-  const fd=new URLSearchParams();
-  fd.append("action","login");
-  fd.append("roll",ROLL);
-  fd.append("dob",DOB);
-
-  fetch(SCRIPT_URL,{method:"POST",body:fd})
-  .then(r=>r.json())
-  .then(res=>{
-    if(res.status==="NOT_REGISTERED"){
-      msg.style.color="red";
-      msg.innerText="You are not registered.";
-      return;
-    }
-    if(res.status==="ELIGIBLE"){
-      loginBox.style.display="none";
-      wheelBox.style.display="block";
-    }
-    if(res.status==="ALREADY_ASSIGNED"){
-      showResult(res.projectID,res.teammates);
-    }
-  })
-  .catch(()=>{
-    msg.style.color="red";
-    msg.innerText="Server error. Please try again.";
-  });
-}
-
-function spin(){
-  spinBtn.disabled=true;
-  const fd=new URLSearchParams();
-  fd.append("action","spin");
-  fd.append("roll",ROLL);
-  fd.append("dob",DOB);
-
-  fetch(SCRIPT_URL,{method:"POST",body:fd})
-  .then(r=>r.json())
-  .then(res=>{
-    showResult(res.project,res.teammates);
-  });
-}
-
-function showResult(project,team){
-  let html=`<b>Assigned Project:</b> ${project}<br><br>`;
-  team.forEach((s,i)=>{
-    html+=`${i+1}. ${s.name} (${s.roll})<br>`;
-  });
-  result.innerHTML=html;
-}
-</script>
-
+  Redirecting to login…
 </body>
 </html>
