--- a/allocate.html
+++ b/allocate.html
@@ -7,25 +7,97 @@
 
 <style>
 body{
+  margin:0;
+  height:100vh;
   font-family:"Segoe UI",Arial,sans-serif;
   background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-  margin:0;height:100vh;
-  display:flex;justify-content:center;align-items:center;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 .card{
-  background:#fff;
+  background:#ffffff;
   width:100%;
-  max-width:500px;
+  max-width:600px;
   padding:30px;
-  border-radius:14px;
-  box-shadow:0 15px 40px rgba(0,0,0,.25);
+  border-radius:18px;
+  box-shadow:0 20px 45px rgba(0,0,0,.3);
   text-align:center;
 }
-h1{color:#203a43;font-size:20px;}
-.msg{
+h1{
+  color:#203a43;
+  margin-bottom:10px;
+}
+.sub{
+  color:#666;
+  font-size:14px;
+  margin-bottom:20px;
+}
+#wheel-container{
+  position:relative;
+  width:280px;
+  height:280px;
+  margin:20px auto;
+}
+#wheel{
+  width:100%;
+  height:100%;
+  border-radius:50%;
+  border:8px solid #203a43;
+  background:conic-gradient(
+    #1abc9c 0deg 40deg,
+    #3498db 40deg 80deg,
+    #9b59b6 80deg 120deg,
+    #e67e22 120deg 160deg,
+    #e74c3c 160deg 200deg,
+    #f1c40f 200deg 240deg,
+    #16a085 240deg 280deg,
+    #2980b9 280deg 320deg,
+    #8e44ad 320deg 360deg
+  );
+  transition:transform 4s cubic-bezier(0.25,0.1,0.25,1);
+}
+#pointer{
+  position:absolute;
+  top:-18px;
+  left:50%;
+  transform:translateX(-50%);
+  width:0;height:0;
+  border-left:12px solid transparent;
+  border-right:12px solid transparent;
+  border-bottom:20px solid #c0392b;
+}
+button{
   margin-top:20px;
+  padding:12px 30px;
+  border:none;
+  border-radius:30px;
   font-size:16px;
   font-weight:600;
+  color:#fff;
+  background:linear-gradient(135deg,#2c5364,#203a43);
+  cursor:pointer;
+}
+button:disabled{
+  background:#aaa;
+  cursor:not-allowed;
+}
+.result{
+  margin-top:25px;
+  text-align:left;
+}
+.result h3{
+  color:#203a43;
+}
+.team{
+  margin-top:10px;
+  padding-left:15px;
+}
+.footer{
+  margin-top:20px;
+  font-size:12px;
+  color:#777;
+  text-align:center;
 }
 </style>
 </head>
@@ -34,25 +106,49 @@ h1{color:#203a43;font-size:20px;}
 
 <div class="card">
   <h1>Project Allocation</h1>
-  <div class="msg" id="msg">Checking login…</div>
+  <div class="sub">Group Discussion & Seminar (ME3273)</div>
+
+  <div id="wheel-container">
+    <div id="pointer"></div>
+    <div id="wheel"></div>
+  </div>
+
+  <button id="spinBtn" onclick="spin()">SPIN THE WHEEL</button>
+
+  <div class="result" id="result"></div>
+
+  <div class="footer">
+    Developed by Dr. Rajesh Akula · IIEST Shibpur
+  </div>
 </div>
 
 <script>
 const BACKEND_URL =
   "https://script.google.com/macros/s/AKfycbyDrGsFVsYTxLyGkWLgEOQUDYCJXXeQur-7r8a9R59rWChtrxAtLFOt5pQU3C8oFftsCg/exec";
 
-// Read URL parameters
 const params = new URLSearchParams(window.location.search);
 const roll = params.get("roll");
 const dob  = params.get("dob");
 
-const msg = document.getElementById("msg");
+const wheel = document.getElementById("wheel");
+const btn = document.getElementById("spinBtn");
+const result = document.getElementById("result");
 
-msg.innerHTML = `
-<button onclick="spin()">SPIN & ASSIGN PROJECT</button>
-`;
+let rotated = false;
 
 function spin(){
+
+  if(rotated) return;
+  rotated = true;
+  btn.disabled = true;
+
+  const rotation = 360*6 + Math.floor(Math.random()*360);
+  wheel.style.transform = `rotate(${rotation}deg)`;
+
+  setTimeout(assignProject, 4200);
+}
+
+function assignProject(){
 
   fetch(BACKEND_URL,{
     method:"POST",
@@ -65,21 +161,25 @@ function spin(){
   .then(r=>r.json())
   .then(res=>{
     if(res.status==="ASSIGNED"){
-      show(res.project,res.team);
-    } else if(res.status==="ALREADY_ASSIGNED"){
-      msg.innerText="Already assigned.";
-    } else {
-      msg.innerText="No projects left.";
+      showResult(res.project,res.team);
+    }else if(res.status==="ALREADY_ASSIGNED"){
+      result.innerHTML="<b>You are already assigned.</b>";
+    }else{
+      result.innerHTML="<b>No projects left.</b>";
     }
   });
 }
 
-function show(project,team){
-  let html=`<h3>${project}</h3><hr>`;
+function showResult(project,team){
+
+  let html = `<h3>Assigned Project: ${project}</h3>`;
+  html += `<div class="team"><b>Team Members:</b><br>`;
   team.forEach((s,i)=>{
-    html+=`${i+1}. ${s.name} (${s.roll})<br>`;
+    html += `${i+1}. ${s.name} (${s.roll})<br>`;
   });
-  msg.innerHTML=html;
+  html += `</div>`;
+
+  result.innerHTML = html;
 }
 </script>
 
