--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Project Allocation Login | ME3273</title>
+<title>Topic Allocation Login | ME3273</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -55,17 +55,23 @@ button:disabled{background:#999;cursor:not-allowed;}
 .register{text-align:center;margin-top:12px;font-size:13px;}
 .register a{color:#2c5364;font-weight:600;text-decoration:none;}
 .footer{
-  margin-top:26px;text-align:center;
-  font-size:13px;color:#5f6f78;font-weight:600;
+  margin-top:26px;
+  text-align:center;
+  font-size:13px;
+  color:#5f6f78;
+  font-weight:600;
 }
-.footer span{font-size:12px;color:#7a8a93;}
+.footer div{
+  font-size:12px;
+  color:#7a8a93;
+}
 </style>
 </head>
 
 <body>
 
 <div class="card">
-  <h1>Project Allocation</h1>
+  <h1>Topic Allocation</h1>
   <h2>Group Discussion & Seminar (ME3273)</h2>
 
   <label>Roll Number</label>
@@ -86,8 +92,8 @@ button:disabled{background:#999;cursor:not-allowed;}
   </div>
 
   <div class="footer">
-    <strong>Developed by Rajesh Akula</strong>
-    <span>© 2026 · IIEST Shibpur</span>
+    Developed by Rajesh Akula
+    <div>© 2026 · IIEST Shibpur</div>
   </div>
 </div>
 
